--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: example
+        app: example1
     spec:
       containers:
       - name: example-container
